# substrate-staking

./: .gitignore  README.md
node-template/: Cargo.toml
node-template/runtime/: Cargo.toml
staking-node/: Cargo.toml
staking-node/runtime/: Cargo.toml
staking-node/runtime/src/: constants.rs  lib.rs
staking-node/src/: chain_spec.rs  cli.rs  main.rs  service.rs
