[package]
name = "staking-node-runtime"
version = "0.0.1"
authors = ["luswar"]
edition = "2018"

[dependencies]
#rev=ab4aca33fde8ecd0803771e289e97dec74291e82
aura = { package = "pallet-aura", git = "https://github.com/paritytech/substrate.git", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
grandpa = { package = "pallet-grandpa", git = "https://github.com/paritytech/substrate.git", default-features = false }
babe = { package = "pallet-babe", version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate.git", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate.git", default-features = false }

codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
frame-executive = {git = "https://github.com/paritytech/substrate.git", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", default-features = false}
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-consensus-babe = { version = "0.8", default-features = false, git = "https://github.com/paritytech/substrate.git" }


pallet-staking = { version = "2.0.0", features = ["migrate"], git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-staking-reward-curve = { version = "2.0.0",  git = "https://github.com/paritytech/substrate.git" }
pallet-session = { version = "2.0.0", features = ["historical"], git = "https://github.com/paritytech/substrate.git", default-features = false }
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-treasury = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-collective = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }


[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"pallet-authority-discovery/std",
	"pallet-collective/std",
	"pallet-treasury/std",
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"indices/std",
	"randomness-collective-flip/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"babe/std",
	"pallet-im-online/std",
	"sp-staking/std",
	"pallet-staking/std",
	"pallet-session/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
]
